# malt_render

./: CMakeLists.txt  Readme.md  display.cpp  malt_render-config.cmake  module.cpp  module.json  render_global.cpp
cmake/: FindSOIL.cmake
components/: camera.cpp  material.cpp  mesh_renderer.cpp  render_test.cpp
components/lights/: directional_light.cpp  point_light.cpp
include/malt_render/: display.hpp  framebuffer.hpp  malt_render_fwd.hpp  mesh_loader.hpp  messages.hpp  module.hpp  render_ctx.hpp  render_fwd.hpp  render_global.hpp  shader_loader.hpp  texture_loader.hpp
include/malt_render/components/: camera.hpp  cube_test.hpp  material.hpp  mesh_renderer.hpp  render_test.hpp
include/malt_render/components/lights/: directional_light.hpp  point_light.hpp
include/malt_render/texture/: tex2d.hpp
src/: framebuffer.cpp  mesh_loader.cpp  module.cpp  render_global.cpp  shader_loader.cpp  texture_loader.cpp
src/components/: camera.cpp  cube_test.cpp  material.cpp  mesh_renderer.cpp  render_test.cpp
src/components/lights/: directional_light.cpp  point_light.cpp
src/texture/: tex2d.cpp
texture/: tex2d.cpp
